--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ for:
 -
   matrix:
     only:
-      - image: Ubuntu
+      - image: Visual Studio 2017
 
   install:
     # semantic-version requires node > 8.3
@@ -35,12 +35,12 @@ test: off
 # Disable builds on new tags
 skip_tags: true
 
-# Fail as soon as any job fails
-fast_finish: true
-
 cache:
   # Cake packages cache
   - tools -> build.cake
   # NuGet packages cache
   - '%LocalAppData%\NuGet\v3-cache -> **\*.csproj'
 
+matrix:
+  # Fail as soon as any job fails
+  fast_finish: true
