--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,8 @@
 
 image:
   - Ubuntu
-  - Visual Studio 2017\
+  - Visual Studio 2017
+  
 environment:
   # semantic-version requires node > 8.3
   nodejs_version: 10.3.0
