--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,7 @@ test: off
 skip_tags: true
 
 cache:
-  # Cake packages cache
+  # Cake packages cache (build.ps1 or build.cake)
   - tools -> build.*
   # NuGet packages cache (windows and linux)
   - '%LocalAppData%\NuGet\v3-cache -> **\*.csproj'
